--- a/www/templates/tab-dash-detail.html
+++ b/www/templates/tab-dash-detail.html
@@ -2,8 +2,8 @@
 <ion-view view-title="Good Details">
   <ion-content class="padding">
   	<div class="card">
-			{{good.name}}
-			{{good.description}}
+			<h2>{{good.name}}</h2>
+			<h3>{{good.description}}</h3>
 			<div class='item item-image'>
 				<img src='{{good.photo}}'>
 			</div>
