--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,18 +5,19 @@ navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top tabs-positive">
 
-  <!-- Dashboard Tab -->
-  <ion-tab title="Goods" icon-off="ion-ios-pulse" icon-on="ion-settings" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
-  </ion-tab>
-
   <!-- Chats Tab -->
-  <ion-tab title="Chats" icon-off="ion-ios-chatboxes-outline" icon-on="ion-ios-chatboxes" href="#/tab/chats">
+  <ion-tab title="Search" icon-off="ion-ios-search" icon-on="ion-ios-search" href="#/tab/chats">
     <ion-nav-view name="tab-chats"></ion-nav-view>
   </ion-tab>
 
+  <!-- Dashboard Tab -->
+  <ion-tab title="Goods" icon-off="ion-settings" icon-on="ion-settings" href="#/tab/dash">
+    <ion-nav-view name="tab-dash"></ion-nav-view>
+  </ion-tab>
+
+
   <!-- Account Tab -->
-  <ion-tab title="Account" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/account">
+  <ion-tab title="Friends" icon-off="ion-ios-people" icon-on="ion-ios-people" href="#/tab/account">
     <ion-nav-view name="tab-account"></ion-nav-view>
   </ion-tab>
 
