--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -11,14 +11,14 @@ navigation history that also transitions its views in and out.
   </ion-tab>
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Goods" icon-off="ion-settings" icon-on="ion-settings" href="#/tab/dash">
-    <ion-nav-view name="tab-dash"></ion-nav-view>
+  <ion-tab title="Goods" icon-off="ion-settings" icon-on="ion-settings" href="#/tab/goods">
+    <ion-nav-view name="tab-goods"></ion-nav-view>
   </ion-tab>
 
 
   <!-- Account Tab -->
-  <ion-tab title="Friends" icon-off="ion-ios-people" icon-on="ion-ios-people" href="#/tab/account">
-    <ion-nav-view name="tab-account"></ion-nav-view>
+  <ion-tab title="Friends" icon-off="ion-ios-people" icon-on="ion-ios-people" href="#/tab/friends">
+    <ion-nav-view name="tab-friends"></ion-nav-view>
   </ion-tab>
 
 
