--- a/www/templates/tab-friend-detail.html
+++ b/www/templates/tab-friend-detail.html
@@ -1,5 +1,5 @@
 
-<ion-view view-title="Good Details">
+<ion-view view-title="Friend's Offers">
   <ion-content class="padding" ng-repeat="good in goods track by $index">
 <!--   	<div class="card"> -->
  			<ion-item class='item item-thumbnail-left item-remove-animate' ng-repeat="good in goods track by $index" type="item-text-wrap">
