Add default photos for missing photos for users and goods.

--- a/www/templates/tab-good-detail.html
+++ b/www/templates/tab-good-detail.html
@@ -10,5 +10,7 @@
 		</div>
 		<button class='button button-block button-stable'>Request This Offer
 		</button>
+		<button class='button button-block button-royal'>Where Is This Offer
+		</button>
 	</ion-content>
 </ion-view>
