--- a/www/templates/tab-friend-detail-good.html
+++ b/www/templates/tab-friend-detail-good.html
@@ -8,5 +8,9 @@
 					<p>{{good.description}}</p>
 			</div>
 		</div>
+		<button class='button button-block button-stable'>Request This Offer
+		</button>
+		<button class='button button-block button-royal'>Where Is This Offer
+		</button>
 	</ion-content>
 </ion-view>
