--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,8 +6,8 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-icon-top tabs-positive">
 
   <!-- Chats Tab -->
-  <ion-tab title="Search" icon-off="ion-ios-search" icon-on="ion-ios-search" href="#/tab/chats">
-    <ion-nav-view name="tab-chats"></ion-nav-view>
+  <ion-tab title="Search" icon-off="ion-ios-search" icon-on="ion-ios-search" href="#/tab/search">
+    <ion-nav-view name="tab-search"></ion-nav-view>
   </ion-tab>
 
   <!-- Dashboard Tab -->
