--- a/www/templates/tab-friends.html
+++ b/www/templates/tab-friends.html
@@ -1,5 +1,7 @@
 <ion-view view-title="Friends">
-  <ion-content>
+  <ion-content ng-controller='RefreshCtrl'>
+  	<ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()">
+  	</ion-refresher>
     <ion-list>
     	<ion-item class='item item-avatar item-remove-animate item-icon-right' ng-repeat="friend in friends track by $index" type="item-text-wrap" href="#/tab/friends/{{friend.id}}">
         <img src='{{friend.photo}}'>
